--- a/ProductsSearch.Web/appsettings.json
+++ b/ProductsSearch.Web/appsettings.json
@@ -12,7 +12,7 @@
     "DatabaseName": "promotions"
   },
   "ApiSettings": {
-    "BaseUrl": "https://localhost:60972/",
+    "BaseUrl": "http://localhost:7071/api",
     "GetProductsEndpoint": "/products"
   },
   "AllowedHosts": "*"
