--- a/ProductsSearch.Api/Dockerfile
+++ b/ProductsSearch.Api/Dockerfile
@@ -1,13 +1,14 @@
 FROM mcr.microsoft.com/azure-functions/dotnet:3.0 AS base
 WORKDIR /home/site/wwwroot
-EXPOSE 80
+EXPOSE 7071
+EXPOSE 27017
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["ProductsSearch.Api/ProductsSearch.Api.csproj", "ProductsSearch.Api/"]
 COPY ["ProductsSearch.Core/ProductsSearch.Core.csproj", "ProductsSearch.Core/"]
-COPY ["ProductsSearch.Web/ProductsSearch.Web.csproj", "ProductsSearch.Web/"]
-COPY ["MongoDataAccess/ProductsSearch.Infrastructure.csproj", "MongoDataAccess/"]
+COPY ["ProductsSearch.Common/ProductsSearch.Common.csproj", "ProductsSearch.Common/"]
+COPY ["ProductsSearch.Infrastructure/ProductsSearch.Infrastructure.csproj", "ProductsSearch.Infrastructure/"]
 RUN dotnet restore "ProductsSearch.Api/ProductsSearch.Api.csproj"
 COPY . .
 WORKDIR "/src/ProductsSearch.Api"
