--- a/ProductsSearch.Web/appsettings.json
+++ b/ProductsSearch.Web/appsettings.json
@@ -13,7 +13,7 @@
   },
   "ApiSettings": {
     "BaseUrl": "http://localhost:7071/api",
-    "GetProductsEndpoint": "/products"
+    "GetProductsEndpoint": "/products/"
   },
   "AllowedHosts": "*"
 }
